--- a/rename2.html
+++ b/rename2.html
@@ -16,8 +16,8 @@
         </div>
         <div class="search-bar">
             <select class="category-select">
-                <option value="all">collocation</option>
-                <option value="furniture">Furniture</option>
+                <option value="furniture">furniture</option>
+                <option value="collocation">collocation</option>
                 <option value="merches">Merches</option>
             </select>
             <input type="text" placeholder="Search products, brands and categories">
@@ -62,7 +62,7 @@
                 <button class="contact-btn">contact</button>
             </div>
             </section>
-            <h1>1 min from ensam</h1><div>
+            <h1>5 min from ensam</h1><div>
                 <section class="line1">
                 <div class ="product">
                     <img src="#" alt="descriptive photo" class="photo">
@@ -89,7 +89,7 @@
                     <button class="contact-btn">contact</button>
                 </div>
                 </section>
-                <h1>1 min from ensam</h1><div>
+                <h1>10 min from ensam</h1><div>
                     <section class="line1">
                     <div class ="product">
                         <img src="#" alt="descriptive photo" class="photo">
@@ -116,7 +116,7 @@
                         <button class="contact-btn">contact</button>
                     </div>
                     </section>
-                    <h1>1 min from ensam</h1><div>
+                    <h1>15 min from ensam</h1><div>
                         <section class="line1">
                         <div class ="product">
                             <img src="#" alt="descriptive photo" class="photo">
@@ -143,7 +143,7 @@
                             <button class="contact-btn">contact</button>
                         </div>
                         </section>
-                        <h1>1 min from ensam</h1><div>
+                        <h1>20 min from ensam</h1><div>
                             <section class="line1">
                             <div class ="product">
                                 <img src="#" alt="descriptive photo" class="photo">
