--- a/rename2.html
+++ b/rename2.html
@@ -26,6 +26,7 @@
         <div class="nav-links">
             <a href="#">account</a>
             <a href="#">Help</a>
+            <a href="#" class="cart"><i class="fa fa-shopping-cart"></i> Cart</a>
         </div>
     </header>
     
